--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <h1>Pomodoro Timer & Countdown
-    </h1>
+
+    <div class="header_Title">
+        <h1>Pomodoro Timer & Countdown</h1>
+    </div>
     <div class="menu_ptc btn-group btn-group-toggle btn-group-vertical" data-toggle="buttons">
         <label class="btn btn-secondary menu_pomodoro active">
             <input type="radio" name="options" id="option1" autocomplete="off" checked>1
@@ -36,8 +38,8 @@
                 <div>
                     <div class="progress">
                         <div class="progress-bar  progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                            style="width:40%">
-                            40%
+                            style="width:75%">
+                            75%
                         </div>
                     </div>
                 </div>
