--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="time values local">
-                    <label id="hours">00</label> :
-                    <label id="minutes">00</label> :
-                    <label id="seconds">00</label>
+                <div id="time_local">
                 </div>
                 <div class="time values action">
                     <label id="hours">00</label> :
