--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                         </div>
                     </div>
                 </div>
-                <div id="time_local">
-                </div>
+                <div id="time_local"></div>
                 <div class="time values action">
-                    <label id="hours">00</label> :
-                    <label id="minutes">00</label> :
+                    <label id="hours">00</label>:
+                    <label id="minutes">00</label>:
                     <label id="seconds">00</label>
                 </div>
-                <div>
-                    <button type="button" class="btn btn-dark">Start</button>
-                    <button type="button" class="btn btn-dark">Reset</button>
-                    <button type="button" class="btn btn-dark">Info</button>
+                <div class="container_buttons">
+                    <button type="button" class="btn btn-dark" id="start_button">Start</button>
+                    <button type="button" class="btn btn-dark" id="pause_button">Pause</button>
+                    <button type="button" class="btn btn-dark" id="reset_button">Reset</button>
+                    <button type="button" class="btn btn-dark" id="info_button">Info</button>
                 </div>
             </div>
         </div>
